[intern] Using Boolean.valueOf() instead of new Boolean()